@@ -10,6 +10,7 @@ Patches and other contributions from:
     Joseph Boyer Jr. <jboyer@liquidnet.com>
     David Brown <dmlb2000@gmail.com>
     James Bowes <jbowes@redhat.com>
+    James Cammarata <james.cammarata@savvis.net>
     C. Daniel Chase <dan@cdchase.com>
     Dave Hatton <dave@davehatton.it>
     Máirín Duffy <duffy@redhat.com>
