@@ -14,6 +14,7 @@ Cobbler CHANGELOG
 - allow mod python bits to work via non-80 http ports
 - when mirroring repos, act as 686 not 386 to get all the kernel updates
 - upgrades to cobbler buildiso
+- added patch to allow --in-place editing of ksmeta/kopts
 
 - Wed Jun 03 2008 - 1.0.3
 - Fix typo in replicate code
